When editing a document, if a Preview is open, and the window is thin enough to make the Preview window span the full width, some elements are wrapped, but not hidden and appear over the top of the content. This PR fixes that by using isolation to correctly order the stacking context on .

--- a/packages/ui/src/elements/DocumentFields/index.scss
+++ b/packages/ui/src/elements/DocumentFields/index.scss
@@ -85,6 +85,7 @@
 
     &--force-sidebar-wrap {
       display: block;
+      isolation: isolate;
 
       .document-fields {
         &__main {
